# terrariaclone-cpp-sdl2

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/SDL2_image/: libSDL2_image-2.0.0.dylib
lib/SDL2_image/cmake/SDL2_image/: sdl2_image-config.cmake
lib/SDL2_image/pkgconfig/: SDL2_image.pc
src/: Constants.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Game.hpp  GameObject.cc  GameObject.cpp  GameObject.h  Player.cpp  Player.h  RenderWindow.hpp  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  Transform.h  main.cpp
src/core/: Game.cpp
src/entities/: Entity.hpp
src/systems/: renderwindow.cpp
